[project]
name = "monai-explore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "fire>=0.7.1",
    "huggingface-hub>=0.34.4",
    "matplotlib>=3.10.5",
    "monai[all]>=1.5.0",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "pytorch-ignite>=0.4.2",
    "scikit-image>=0.25.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.56.0",
]
